---------------------------------------------------------------------------------------------------
Version: 1.4.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.4.6
Date: 2025-07-30
  Changes:
    - Removed some built-in presets that became redundant, as these mods now provide their own milestones preset: Full Pymods, Krastorio 2, Space Exploration, Bob's and Angel's
    - Removed several presets for mods that became outdated and won't be updated.

  Bugfixes:
    - Fixed crash when a valid item had an alias for a removed item (e.g. when installing then removing Bob's enemies)

---------------------------------------------------------------------------------------------------
Version: 1.4.5
Date: 2025-05-29
  Changes:
    - Increased the shortcut icon resolution to match the new icons from Factorio 2.0.18.
    - Removed built-in K2 preset, in favor of K2's own preset provided by their mod.

  Bugfixes:
    - Fixed that chat notifications for technology milestones would not show the time they were achieved.
    - Fixed that backfilling a quality milestone would wrongly copy the time of an existing milestone with a different quality. (Thanks to stef77)
    - Fixed that pressing E on the settings UI would just close the UI and lose all changes instead of confirming them.

  Locale:
    - Chinese translation update thanks to luaotix.

---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: 2025-01-30
  Changes:
    - Added support for quality kills, for players who play with mods that add quality enemies.

  Bugfixes:
    - Fixed crash when importing a preset.
    - Fixed rare crash when another mod changes a player's force the moment the game is created.