@@ -42,6 +42,27 @@ commands.add_command("milestones-set-milestone-time",
 "- Manually set a time for a milestone. Usage: milestone_name,lower_bound_tick,tick. Example: `/milestones-set-milestone-time iron-plate,600,6000` will set the iron-plate milestone time to be between 10 seconds and 100 seconds.",
   debug_set_milestones_time)
 
+function debug_unset_milestones(command_data)
+  if not command_data.parameter then return end
+  local force = game.get_player(command_data.player_index).force
+  local storage_force = storage.forces[force.name]
+  local name = command_data.parameter
+  local i = 1
+  while i <= #storage_force.complete_milestones do
+    local milestone = storage_force.complete_milestones[i]
+    if milestone.name == name then
+      mark_milestone_unreached(storage_force, milestone, i)
+      refresh_gui_for_force(force)
+      game.print("Milestone unset.")
+      return
+    end
+    i = i + 1
+  end
+end
+commands.add_command("milestones-unset-milestone",
+"- Manually unset a milestone. Usage: milestone_name. Example: `/milestones-unset-milestone iron-plate` will unset the iron-plate milestone.",
+  debug_unset_milestones)
+
 function reinitialize_gui(command_data)
   if not command_data.player_index then return end
   reinitialize_player(command_data.player_index)
